<resources>
    <string name="app_name">parking control</string>
    <string name="txtTitle">Registrarse</string>
    <string name="btnRegistrarUsu">ACEPTAR</string>
    <string name="txtnomUsu">Nombre</string>
    <string name="txtmailUsu">Correo electronico</string>
    <string name="txtPassUsu">Contraseña</string>
    <string name="txtRepPassUsu">Repetir Contraseña</string>
    <string name="agregarParqueo">Agregar Parqueo</string>
    <string name="title_activity_parqueos_drawer">ParqueosDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>