<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarUsuario">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageRegistrar"
                android:layout_width="127dp"
                android:layout_height="73dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/iconoregistrar" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="172dp"
                android:layout_height="74dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="137dp"
                    android:layout_height="46dp"
                    android:layout_weight="2"
                    android:text="@string/txtTitle"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#2196F3"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.457"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.571"
                    tools:text="@string/txtTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/txtnomUsu"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtnomUsu"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtmailUsu"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtmailUsu"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtPassUsu"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtPassUsu"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtRepPassUsu"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/txtRepPassUsu"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnRegistrarUsu"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:text="@string/btnRegistrarUsu"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:text="@string/btnRegistrarUsu" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>